--- a/recherche.css
+++ b/recherche.css
@@ -36,6 +36,6 @@ border-radius: 10px;
 
    border-radius:10px 0px 0px 10px; 
 }
-#password, #ok, #basket{
+#password, #ok, #basket, #search{
     border-radius: 10px 10px 10px 10px;
 }
