--- a/acceuil.css
+++ b/acceuil.css
@@ -1,8 +1,8 @@
 #bg{
-    background-image: url(hufflepuff.jpg);
+    background-image: url(bg7.jpg);
     background-size:100%;
-    background-attachment: fixed; 
-    background-position:center top;
+    /* background-attachment: fixed;
+    background-position:center top; */
 }
 #header{
 
@@ -41,18 +41,69 @@ border-radius: 10px;
     overflow-x:hidden;
     
 }
- ::-webkit-scrollbar{
+.card{
+   box-shadow: rgb(116, 62, 2);
+   background-color: rgb(248, 235, 176);
+   padding-bottom: 5px;
+   height:55vh;
+}
+
+::-webkit-scrollbar{
     width: 14px;
 	height: 14px;
-	background: #bfb6a3 url(images/bg-blog-repeat.png) 0 0 repeat;
+	
 
+} 
+
+::-webkit-scrollbar-track-piece {						/* Fond */
+	background: transparent none;
+	border: solid 4px transparent;
+	border-right-width: 8px;
+	margin: 4px;
+    -webkit-box-shadow: inset 1px 1px 0 0 rgb(235, 166, 39), inset -1px -1px 0 0 rgb(224,220,210);
+}
+
+::-webkit-scrollbar-track-piece:horizontal {			/* Fond pour la barre du bas */
+	border-right-width: 4px;
+	border-bottom-width: 8px;
+}
+
+::-webkit-scrollbar-thumb {								/* Barre */
+	border: solid 0 transparent;
+	border-right-width: 4px;
+	-webkit-border-radius: 5px;
+	-webkit-border-top-right-radius: 9px 5px;
+	-webkit-border-bottom-right-radius: 9px 5px;
+	-webkit-box-shadow: inset 0 0 0 1px rgb(104, 54, 7), inset 0 0 0 6px rgb(104, 54, 7);
+}
+::-webkit-scrollbar-thumb:hover {						/* Barre */
+	-webkit-box-shadow: inset 0 0 0 1px rgb(253, 180, 71), inset 0 0 0 6px rgb(141, 73, 10);
+}
+::-webkit-scrollbar-thumb:horizontal {					/* Barre du bas */
+	border-right-width: 0;
+	border-bottom-width: 4px;
+	-webkit-border-top-right-radius: 5px;
+	-webkit-border-bottom-right-radius: 5px 9px;
+	-webkit-border-bottom-left-radius: 5px 9px;
+}
+.card-text{
+    font-size: medium;
+    text-align:center;
 } 
 .card-text1{
     font-size: medium;
+    text-align:center;
 } 
 .card-text2{
  font-size: small;
+ text-align:center;
 }
-.cardtext3{
+.card-text3{
  font-size:smaller;
+ text-align:center;
+}
+.card-title{
+    font-size:large;
+    text-align:center;
+    font-weight:bold;
 }
