--- a/acceuil.css
+++ b/acceuil.css
@@ -14,12 +14,15 @@
     color: white;
 
 } 
-
+.contact{
+    text-align: center;
+}
 
 
 #options-co{
     font-weight:bold;
     margin-bottom:10px;
+    font-size:large;
 }
 #recherche,.login,#options-co,.search{
     color:white;
@@ -33,6 +36,13 @@ border-radius: 10px;
 
    border-radius:10px 0px 0px 10px; 
 }
+.search{
+    font-weight: bold;
+}
+.search:hover{
+    color:black;
+    font-style: italic;
+}
 #password, #ok, #basket{
     border-radius: 10px 10px 10px 10px;
 } 
@@ -45,7 +55,7 @@ border-radius: 10px;
    box-shadow: rgb(116, 62, 2);
    background-color: rgb(248, 235, 176);
    padding-bottom: 5px;
-   height:55vh;
+   height:430px;
 }
 
 ::-webkit-scrollbar{
