--- a/recherche.css
+++ b/recherche.css
@@ -1,36 +1,28 @@
 #bg{
     background-image: url(bg7.jpg);
     background-size:100%;
-    height:auto;
-    background-attachment: fixed;
-    background-position:center top; 
+    background-attachment: fixed; 
+    background-position:center top;
 }
 #header{
 
     font-size:large;
     color: white;
-    /* background-size: cover;
-    background-position: center; */
-    background-color:#556B2F ; 
-    color: white;
-
+    background-size: cover;
+    background-position: center;
+    background-color:#556B2F ; height: 200px; color: white;
 } 
-.contact{
-    text-align: center;
+
+textarea{
+    resize:none;
+    width:100%;
+    
 }
 
 
-.search{
-    font-weight: bold;
-}
-.search:hover{
-    color:black;
-    font-style: italic;
-}
 #options-co{
     font-weight:bold;
     margin-bottom:10px;
-    font-size:large;
 }
 #recherche,.login,#options-co,.search{
     color:white;
@@ -40,78 +32,10 @@
 
 border-radius: 10px;
 }
+#search{
 
-#password, #ok, #basket,#search{
+   border-radius:10px 0px 0px 10px; 
+}
+#password, #ok, #basket, #search{
     border-radius: 10px 10px 10px 10px;
-} 
-#cards{
-    max-height:800px;
-    overflow-x:hidden;
-    
-}
-.card{
-   box-shadow: rgb(116, 62, 2);
-   background-color: rgb(248, 235, 176);
-   padding-bottom: 5px;
-   height:470px;
-}
-
-::-webkit-scrollbar{
-    width: 14px;
-	height: 14px;
-	
-
-} 
-
-::-webkit-scrollbar-track-piece {						/* Fond */
-	background: transparent none;
-	border: solid 4px transparent;
-	border-right-width: 8px;
-	margin: 4px;
-    -webkit-box-shadow: inset 1px 1px 0 0 rgb(235, 166, 39), inset -1px -1px 0 0 rgb(224,220,210);
-}
-
-::-webkit-scrollbar-track-piece:horizontal {			/* Fond pour la barre du bas */
-	border-right-width: 4px;
-	border-bottom-width: 8px;
-}
-
-::-webkit-scrollbar-thumb {								/* Barre */
-	border: solid 0 transparent;
-	border-right-width: 4px;
-	-webkit-border-radius: 5px;
-	-webkit-border-top-right-radius: 9px 5px;
-	-webkit-border-bottom-right-radius: 9px 5px;
-	-webkit-box-shadow: inset 0 0 0 1px rgb(104, 54, 7), inset 0 0 0 6px rgb(104, 54, 7);
-}
-::-webkit-scrollbar-thumb:hover {						/* Barre */
-	-webkit-box-shadow: inset 0 0 0 1px rgb(253, 180, 71), inset 0 0 0 6px rgb(141, 73, 10);
-}
-::-webkit-scrollbar-thumb:horizontal {					/* Barre du bas */
-	border-right-width: 0;
-	border-bottom-width: 4px;
-	-webkit-border-top-right-radius: 5px;
-	-webkit-border-bottom-right-radius: 5px 9px;
-	-webkit-border-bottom-left-radius: 5px 9px;
-}
-.card-text{
-    font-size: medium;
-    text-align:center;
-} 
-.card-text1{
-    font-size: medium;
-    text-align:center;
-} 
-.card-text2{
- font-size: small;
- text-align:center;
-}
-.card-text3{
- font-size:smaller;
- text-align:center;
-}
-.card-title{
-    font-size:large;
-    text-align:center;
-    font-weight:bold;
 }
